2018-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/run_parser_all.sh: Only use flags for latex2html in 
	the latex2html tests.

2018-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/run_parser_all.sh: Put flags for latex2html inside a 
	variable so they are less distracting when reading the code.
	Use -c instead of --set-customization-variable in the interests 
	of concision.  Put code post-processing the output files in a 
	separate shell function.

2018-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line) <misc command with text argument>:
	Do not call _trim_spaces_comment_from_content.

2018-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/run_parser_all.sh: Remove some commented-out code.

2018-09-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Mention changes for newer versions of Perl.

2018-09-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/formatting/list_of_tests
	(texi_glossary, texi_bib_example, texi_cond, cond, cond_xml):
	(cond_no-ifhtml_no-ifinfo_no-iftex, cond_ifhtml_ifinfo_iftex)
	(cond_info, cond_info_no-ifhtml_no-ifinfo_no-iftex)
	(cond_info_ifhtml_ifinfo_iftex): Removed.
	* t/92formatting.t
	(texi_glossary, texi_bib_example, texi_cond, cond, cond_xml):
	(cond_no-ifhtml_no-ifinfo_no-iftex, cond_ifhtml_ifinfo_iftex)
	(cond_info, cond_info_no-ifhtml_no-ifinfo_no-iftex)
	(cond_info_ifhtml_ifinfo_iftex): Added.

2018-09-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (parse_texi_file): Save name of subdirectory
	containing input file.
	* tp/Texinfo/Common.pm (parse_renamed_nodes_file): Check for 
	noderename.cnf in subdirectory containing input file first.
	* t/92formatting.t (unknown_nodes_renamed): Output a file for 
	the test and use a renamed nodes file.  This restores an error 
	message that was present in the test this one replaced.

2018-09-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/formatting/list-of-tests